# fastapi_sqlalchemy_mysql

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker_conf.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  supervisor.conf
alembic/: env.py
app/: router.py
app/admin/api/: router.py
app/admin/crud/: crud_user.py
app/admin/model/: __init__.py  user.py
app/admin/schema/: token.py  user.py
app/admin/service/: user_service.py
backend/: .env.example  main.py
backend/alembic/: env.py
backend/app/: .env.example  alembic.ini  init_test_data.py  main.py  router.py
backend/app/alembic/: env.py
backend/app/api/: __init__.py  jwt.py  jwt_security.py  registrar.py  routers.py
backend/app/common/: enums.py  jwt.py  log.py  pagination.py  redis.py  sys_redis.py
backend/app/core/: conf.py  path_conf.py  registrar.py
backend/app/crud/: base.py  crud_user.py  user_crud.py
backend/app/database/: base_class.py  db_mysql.py
backend/app/datebase/: base.py  base_class.py  db_mysql.py
backend/app/middleware/: __init__.py  access_middle.py
backend/app/model/: __init__.py  user.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  base.py  sm_token.py  sm_user.py  token.py  user.py
backend/app/services/: user_service.py
backend/app/utils/: format_string.py  generate_string.py  send_email_verification_code.py
backend/common/: jwt.py  log.py  model.py  pagination.py
backend/common/exception/: errors.py  exception_handler.py
backend/common/msd/: crud.py  model.py
backend/common/response/: response_schema.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: db.py  db_mysql.py  db_redis.py
backend/middleware/: __init__.py  access_middle.py
backend/utils/: timezone.py
common/: jwt.py  log.py  pagination.py
common/exception/: errors.py  exception_handler.py
common/msd/: crud.py  schema.py
core/: conf.py  path_conf.py  registrar.py
database/: db_mysql.py  db_redis.py
deploy/: fastapi_server.conf  gunicorn.conf.py  nginx.conf  supervisor.conf
deploy/docker-compose/: .env.server  docker-compose.yml
middleware/: __init__.py  access_middle.py
utils/: health_check.py  timezone.py
(+27 files in other folders)
